--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,180 @@
+/*Global sizing*/
 *{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'Graphik';
-  src: url('http://fonts.cdnfonts.com/css/graphik');
-}
+/* button default styles*/
+button{
+  background-color: rgba(0, 0, 0, 0);
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: white;
+  color: white;
+  font-family: Graphik;
+}  
 
 body{
-  /* background-color: rgba(24, 24, 24, 1); */
-  font-family: 'Graphik',Arial, Helvetica, sans-serif;
   margin: auto;
+  background: rgba(24, 24, 24, 1);
+  background: rgba(24, 24, 24, 1);
+  font-family: 'Graphik',Arial, Helvetica, sans-serif;
+  color: white;
+  text-align: center;  
+}
+/* Navigation Bar*/
+nav{
+  padding: 30px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  
+}
+
+nav #logo{
+  width: 186px;
+  height: 58px;
+}
+
+nav .header-menu {
+  display: inherit;
+  
+}
+
+nav .header-menu p{
+  width: 83px;
+  height: 44px;
+  padding: 10px;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+}
+
+nav .login-btn{
+  padding: 13.5px 46px;
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
 
 }
 
-img{
-  width: 150px;
-  height: 150px;
+/* text contents*/
+.text-content{
+  display: inline-block;
+  padding: 60px;
+  margin: auto;
 }
+
+.header .text-content h1{
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 80px;
+  line-height: 88px;
+  margin: 10px 0px;
+}
+
+.text-content p{
+  font-family: Graphik;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 17px 0px;
+}
+
+/* header buttons*/
+.header-btn{
+  display: block;  
+}
+.header button{
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
+}
+
+#header-free-btn{
+  padding: 20px 40px;
+  margin: 10px 20px;
+  border-style: none;
+  background-color: #4452FE;
+  ;
+}
+#header-learn-btn{
+  padding: 20px 40px;
+  margin: 10px 20px;
+}
+
+/*Header image or Screens*/
+.screen {
+  display: none;
+  justify-content: center;
+}
+
+
+/*features*/
+.features .text-content h1{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 52px;
+  line-height: 62px;
+}
+
+.features-content-frame{
+  display: flex;
+  justify-content: center;
+}
+
+.featImg-container{
+  position: relative;
+}
+
+.featImg2{
+  position: absolute;
+  bottom: -60px;
+  right: -30px;
+} 
+
+.features .content-row{
+  width: fit-content;
+}
+
+.features .content-block{
+  display: block;
+  padding: 20px;
+  margin: 20px;
+  text-align: left;
+}
+
+.features .content-heading{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.features .content-block h3{
+  margin: 10px;
+  font-family: Graphik;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
+.features .content-block p{
+  font-family: Graphik;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  }
+
