--- a/public/style.css
+++ b/public/style.css
@@ -72,8 +72,8 @@ nav .login-btn{
 
 /* text contents*/
 .text-content{
-  display: inline-block;
-  padding: 60px;
+  display: block;
+  padding: 60px 0px;
   margin: auto;
 }
 
@@ -83,7 +83,6 @@ nav .login-btn{
   font-weight: 500;
   font-size: 80px;
   line-height: 88px;
-  margin: 10px 0px;
 }
 
 .text-content p{
@@ -92,7 +91,6 @@ nav .login-btn{
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  margin: 17px 0px;
 }
 
 /* header buttons*/
@@ -271,3 +269,36 @@ nav .login-btn{
   font-size: 17px;
   line-height: 25px
 }
+
+/*Partners Section*/
+.partners{
+  display: block;
+}
+.partners h1{
+  font-family: Graphik;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 52px;
+  line-height: 62px;
+}
+
+.partner-logos {
+  display: inline-grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  grid-column-gap: 20px;
+  width: fit-content;
+  margin: 30px 0px;
+  }
+
+  .partners button{
+    padding: 20px 40px;
+    margin: 10px 20px;
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 25px
+  }
