--- a/public/style.css
+++ b/public/style.css
@@ -1,213 +1,267 @@
 *{
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+margin: 0px;
+padding: 0px;
+box-sizing: border-box;
 }
 
 /* img {
-  max-width: 100%;
-  height: auto; */
+max-width: 100%;
+height: auto; */
 
 
 body{
-  margin: auto;
-  background: rgba(24, 24, 24, 1);
-  font-family: 'Graphik',Arial, Helvetica, sans-serif;
-  font-style: normal;
-  color: white;
-  text-align: center;  
+margin: auto;
+background: rgba(24, 24, 24, 1);
+font-family: 'Graphik',Arial, Helvetica, sans-serif;
+font-style: normal;
+color: white;
+text-align: center;  
 }
 
 /*Templates*/
 /* button temp*/
 button{
-  margin: 50px;
-  padding: 10px 30px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;
-  background-color: rgba(0, 0, 0, 0);
-  /*button text*/
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 25px;
-  letter-spacing: 0.2px;
-  color: inherit;
+margin: 50px;
+padding: 10px 30px;
+border-style: solid;
+border-width: 1px;
+border-color: white;
+background-color: rgba(0, 0, 0, 0);
+/*button text*/
+font-weight: 500;
+font-size: 17px;
+line-height: 25px;
+letter-spacing: 0.2px;
+color: inherit;
 }  
 
 /*Heading temp*/
 h1{
-  font-weight: normal;
-  font-size: 52px;
-  line-height: 62px;
-  letter-spacing: 0.2px
+font-weight: normal;
+font-size: 52px;
+line-height: 62px;
+letter-spacing: 0.2px;
+padding: 50px;
 }
 
 h3{
-  margin: 10px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  letter-spacing: 0.1px;
+margin: 10px;
+font-weight: 500;
+font-size: 20px;
+line-height: 30px;
+letter-spacing: 0.1px;
 }
 
 /*Paragraph temp*/
 p{
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.2px;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.2px;
 }
 
 /*Link template*/
 li{
-  padding: 10px;
-  margin: 10px;
-  list-style: none;
-  font-family: inherit;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.2px;
+padding: 10px;
+margin: 10px;
+list-style: none;
+font-family: inherit;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.2px;
 }
 ul{
-  display: flex;
+display: flex;
 }
 
 /*card template*/
 .card{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 40px 0px;
-  margin: 0px 10px;
-  border-radius: 10px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+padding: 40px 0px;
+margin: 0px 10px;
+border-radius: 10px;
 }
 
 /*Section heading and paragraph*/
 .text-content{
-  display: inline-block;
-  margin:auto;
+display: inline-block;
+margin:auto;
 }
 
 .title{
-  font-weight: 500;
-  font-size: 80px;
-  line-height: 88px
+font-weight: 500;
+font-size: 80px;
+line-height: 88px
 }
 
 
 #logo{
-  width: 186px;
-  height: 58px;
+width: 186px;
+height: 58px;
 }
 
 
 /* Navigation Bar*/
 nav{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;  
+display: flex;
+align-items: center;
+justify-content: space-evenly;  
 }
 
 /* header button*/
 #free-btn{
-  border-color: #4452FE;
-  background-color: #4452FE;
+border-color: #4452FE;
+background-color: #4452FE;
 }
 
 /*Header image or Screens*/
 .screen {
-  display: none;
-  justify-content: center;
+display: none;
+justify-content: center;
 }
 
 
 /*features*/
 .features-content-frame{
-  display: flex;
-  justify-content: center;
+display: flex;
+justify-content: center;
 }
 .featImg-container{
-  position: relative;
+position: relative;
 }
 .featImg2{
-  position: absolute;
-  bottom: -60px;
-  right: -30px;
+position: absolute;
+bottom: -60px;
+right: -30px;
 } 
 .features .content-row{
-  width: fit-content;
+width: fit-content;
 }
 .features .content-block{
-  display: block;
-  padding: 20px;
-  margin: 20px;
-  text-align: left;
+display: block;
+padding: 20px;
+margin: 20px;
+text-align: left;
 }
 .features .content-heading{
-  display: flex;
-  justify-content: left;
-  align-items: center;
+display: flex;
+justify-content: left;
+align-items: center;
 }
 
 
 
 /*Content Section*/
 .contents {
-  height: auto;
-  width: auto;
-  padding: 60px 0px;
+height: auto;
+width: auto;
+padding: 60px 0px;
 }
 .contents .cards{
-  display: flex;
-  justify-content: center;
+display: flex;
+justify-content: center;
 }
 .contents .card{
-  background-color: white;
+background-color: white;
 }
 .contents .card-heading{
-  width: 288px;
-  height: auto;  
+width: 288px;
+height: auto;  
 }
 .contents .work-card{
-  display: flex;
-  justify-content: space-between;
+display: flex;
+justify-content: space-between;
 }
 .contents .card img{
-  margin: 40px 40px 0px 40px;
+margin: 40px 40px 0px 40px;
 }
 .contents h3{
-  color: #000;
+color: #000;
 }
 .contents .card p{
-  font-weight: normal;
-  color:#5C5C5C;
+font-weight: normal;
+color:#5C5C5C;
 }
 .contents button{
-  border-color: #4452FE;
-  background-color: #4452FE;
+border-color: #4452FE;
+background-color: #4452FE;
 }
 
 /*Gallery Section*/
 .gallery-cards {
-  display: flex;
-  flex-direction: column;
- }
- 
+display: flex;
+flex-direction: column;
+}
+
 .gallery-cards img{
-  border-radius:10px;
-  margin: 10px;
+border-radius:10px;
+margin: 10px;
 }
 
 /*partners*/
 .partner-logos {
-  display: inline-grid;
-  grid-auto-flow: column;
-  grid-gap: 1px 50px;
-  justify-content: center;
+display: inline-grid;
+grid-auto-flow: column;
+grid-gap: 1px 50px;
+justify-content: center;
+align-items: center;
+}
+
+/*Testimonials*/
+.testimonial-cards {
+display: inline-grid;
+grid-template-columns: auto auto;
+grid-template-rows: auto auto;
+row-gap: 20px;
+}
+
+.testimonial .card{
+padding: 40px;
+border: 1px solid #DEDEDE;
+}
+
+.profile{
+display: flex;
+align-items: center;
+align-self: flex-start;
+text-align: left;
+}
+.details{
+margin: 0px 20px;
+}
+
+.testimony{
+width: 320px;
+text-align: left;
+}
+
+/*Cta*/
+.cta-content {
+  display: inline-flex;
+  justify-self: center;
   align-items: center;
- }
- 
+  width: max-content;
+  background-color: #5C5C5C;
+  border-radius: 20px;
+}
+
+.text{
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  padding: 50px;
+}
+.media{  margin: 0px 0px -40px 0px;}
+.media img{  border-radius: 0px 0px 20px 0px;}
+
+.text button{
+border-color: #4452FE;
+background-color: #4452FE;
+margin: 0px 50px;
+}
