--- a/public/style.css
+++ b/public/style.css
@@ -159,9 +159,9 @@ overflow: hidden;
 width: auto;
 height: 50vh;
 background-color: linear;
-margin-top: -500px;
+margin-top: -30%;
 z-index: 2;
-/*! position: fixed; */position: relative;
+position: relative;
 background-image: linear-gradient(#0000 ,black );
 }
 
@@ -284,6 +284,9 @@ padding: 20px 20px 0px 20px;
 }
 
 /*Cta*/
+.cta{
+  padding: 50px;
+}
 .cta-content {
   display: inline-flex;
   justify-self: center;
