--- a/src/Components/Cta/Cta.css
+++ b/src/Components/Cta/Cta.css
@@ -11,22 +11,41 @@
   justify-self: center;
   align-items: center;
   width: max-content;
-  background-color: #5C5C5C;
+  background-color: #5c5c5c;
   border-radius: 20px;
 }
 
-.text{
+.text {
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
   padding: 50px;
 }
-.media{  margin: 0px 0px -40px 0px;}
-.media img{  border-radius: 0px 0px 20px 0px;}
+.media {
+  margin: 0px 0px -40px 0px;
+}
+.media img {
+  border-radius: 0px 0px 20px 0px;
+}
 
-.text button{
-border-color: #4452FE;
-background-color: #4452FE;
-margin: 0px 50px;
+.text button {
+  border-color: #4452fe;
+  background-color: #4452fe;
+  margin: 0px 50px;
+}
+
+@media (max-width: 1280px) {
+  .media img {
+    border-radius: 20px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .cta-content {
+    display: block;
+  }
+  .media img {
+    border-radius: 20px;
+  }
 }
