--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -1,27 +1,53 @@
-
 /*features*/
-.features-content-frame{
-	display: flex;
-	justify-content: center;
-	}
-	.featImg-container{
-	position: relative;
-	}
-	.featImg2{
-	position: absolute;
-	right: 0px;
-	bottom: 0px;
-	}
-	.features .content-row{
-	width: fit-content;
-	height: fit-content;
-	padding: 20px;
-	}
-	.features .content-block{
-	display: block;
-	margin: 20px;
-	text-align: left;
-	}
-	.features .content-block p{
-		padding: 0px;
-	}
+.features-content-frame {
+  display: flex;
+  justify-content: center;
+  max-width: 60%;
+  margin: auto;
+}
+
+.featImg-container {
+  position: relative;
+}
+.featImg2 {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+.features .content-row {
+  max-width: 100%;
+  padding: 20px;
+}
+.features .content-block {
+  display: block;
+  margin: 20px;
+  text-align: left;
+  max-width: 50%;
+}
+
+.features .content-block h3 {
+  max-width: 100%;
+}
+.features .content-block p {
+  padding: 0px;
+  margin: 0px;
+  max-width: 100%;
+}
+
+@media (max-width: 1100px) {
+  .features-content-frame {
+    display: block;
+  }
+  .featImg2 {
+    display: none;
+  }
+
+  .featImg-container img {
+    max-width: 100%;
+  }
+  .features .content-row {
+    display: flex;
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
