--- a/src/Components/Partners/Partners.css
+++ b/src/Components/Partners/Partners.css
@@ -1,9 +1,9 @@
 /*partners*/
 .partner-logos {
-	display: inline-grid;
-	grid-auto-flow: column;
-	grid-gap: 1px 50px;
-	justify-content: center;
-	align-items: center;
-	}
-	
+  display: inline-grid;
+  grid-auto-flow: column;
+  grid-gap: 1px 50px;
+  justify-content: center;
+  align-items: center;
+  max-width: 60%;
+}
