--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -1,33 +1,45 @@
-
 /*Testimonials*/
 .testimonial-cards {
-	display: inline-grid;
-	grid-template-columns: auto auto;
-	grid-template-rows: auto auto;
-	row-gap: 20px;
-	}
-	
-	.testimonial .card{
-	padding: 20px 40px;
-	border: 1px solid #DEDEDE;
-	}
-	
-	.profile{
-	display: flex;
-	align-items: center;
-	align-self: flex-start;
-	text-align: left;
-	}
-	.details{
-	margin: 0px 20px;
-	}
-	.details p{
-		padding: 0px;
-	}
-	
-	.testimony{
-	width: 320px;
-	text-align: left;
-	padding: 20px 20px 0px 20px;
-	}
-	
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  row-gap: 20px;
+  max-width: 50%;
+}
+.testimonial-card-holder {
+  max-width: 60%;
+}
+
+.testimonial .card {
+  padding: 20px 40px;
+  border: 1px solid #dedede;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
+  text-align: left;
+}
+.details {
+  margin: 0px 20px;
+}
+.details p {
+  padding: 0px;
+  max-width: 100%;
+}
+
+.testimony {
+  text-align: left;
+  max-width: 100%;
+  padding: 10px;
+}
+
+@media (max-width: 1100px) {
+  .testimonial-cards {
+    display: inline-block;
+  }
+  .testimonial .card {
+    margin: 10px 0px;
+  }
+}
