--- a/public/style.css
+++ b/public/style.css
@@ -112,3 +112,22 @@ body p {
   justify-content: left;
   align-items: center;
 }
+
+@media (max-width: 1100px) {
+  .section-heading {
+    font-size: 45px;
+    line-height: 50px;
+    padding: 30px;
+  }
+  .btn {
+    margin: 30px;
+    padding: 5px 15px;
+  }
+}
+@media (max-width: 600px) {
+  .section-heading {
+    font-size: 35px;
+    line-height: 40px;
+    padding: 20px;
+  }
+}
