--- a/src/Components/Cta/Cta.css
+++ b/src/Components/Cta/Cta.css
@@ -1,11 +1,11 @@
 /*Cta*/
-.cta {
+.call-to-action {
   padding: 50px;
   padding: 80px;
   display: flex;
   justify-content: center;
 }
-.cta-content {
+.call-to-action-content {
   display: inline-flex;
   flex-basis: auto;
   justify-self: center;
@@ -25,27 +25,27 @@
 .media {
   margin: 0px 0px -40px 0px;
 }
-.media img {
+.call-to-action-image {
   border-radius: 0px 0px 20px 0px;
 }
 
-.text button {
+.call-to-action-button {
   border-color: #4452fe;
   background-color: #4452fe;
   margin: 0px 50px;
 }
 
 @media (max-width: 1280px) {
-  .media img {
+  .call-to-action-image {
     border-radius: 20px;
   }
 }
 
 @media (max-width: 1100px) {
-  .cta-content {
+  .call-to-action-content {
     display: block;
   }
-  .media img {
+  .call-to-action-image {
     border-radius: 20px;
   }
 }
