--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,13 +4,9 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.footer h3 {
+.footer-link-heading {
   margin: 10px 0px;
   padding: 20px 0px;
-}
-.footer p {
-  padding: 10px;
-  margin: 0px;
 }
 .footer-menu {
   padding: 20px;
@@ -38,6 +34,13 @@
 }
 .phone-icon {
   padding: 0px 5px;
+}
+
+.footer-link-text,
+.footer-address,
+.footer-contact {
+  padding: 10px;
+  margin: 0px;
 }
 
 @media (max-width: 1100px) {
