- Responsiveness at a max screen-width of 600px

--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -11,3 +11,11 @@
   border-radius: 10px;
   margin: 10px;
 }
+@media only screen and (max-width: 600px) {
+  .gallery-cards-1 {
+    max-width: 100%;
+  }
+  .gallery-cards-1 > * {
+    max-width: 30%;
+  }
+}
