--- a/public/style.css
+++ b/public/style.css
@@ -66,6 +66,7 @@ body p {
   line-height: 25px;
   letter-spacing: 0.2px;
   color: inherit;
+  cursor: pointer;
 }
 
 /*Heading temp*/
@@ -113,7 +114,34 @@ body p {
   align-items: center;
 }
 
-@media (max-width: 1100px) {
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+  .btn {
+    margin: 30px;
+    padding: 5px 15px;
+    font-size: 12px;
+  }
+  body p {
+    font-size: 14px;
+  }
+  .section-heading {
+    font-size: 30px;
+    line-height: 28px;
+  }
+  .section-sub-heading {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* @media only screen and (min-width: 768px) {...} */
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* @media only screen and (min-width: 992px) {...} */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (max-width: 1200px) {
   .section-heading {
     font-size: 45px;
     line-height: 50px;
@@ -123,11 +151,4 @@ body p {
     margin: 30px;
     padding: 5px 15px;
   }
-}
-@media (max-width: 600px) {
-  .section-heading {
-    font-size: 35px;
-    line-height: 40px;
-    padding: 20px;
-  }
-}
+} */
