--- a/src/Components/Cta/Cta.css
+++ b/src/Components/Cta/Cta.css
@@ -15,12 +15,15 @@
   border-radius: 20px;
 }
 
-.text {
+.call-to-action-text {
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
   padding: 50px;
+}
+.call-to-aciton-heading {
+  max-width: 100%;
 }
 .media {
   margin: 0px 0px -40px 0px;
@@ -33,6 +36,15 @@
   border-color: #4452fe;
   background-color: #4452fe;
   margin: 0px 50px;
+}
+
+@media (max-width: 600px) {
+  .call-to-action-button {
+    margin: auto;
+  }
+  .call-to-aciton-heading {
+    padding: 10px;
+  }
 }
 
 @media (max-width: 1280px) {
