--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -42,6 +42,12 @@
   padding: 10px;
   margin: 0px;
 }
+@media (max-width: 600px) {
+  .footer-content {
+    max-width: 80%;
+    margin: auto;
+  }
+}
 
 @media (max-width: 1100px) {
   .footer-content {
