--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -35,11 +35,17 @@
   padding: 10px;
 }
 
-@media (max-width: 1100px) {
+/* @media (max-width: 1100px) {
   .testimonial-cards {
     display: inline-block;
   }
   .testimonial .card {
     margin: 10px 0px;
+  }
+} */
+@media only screen and (max-width: 600px) {
+  .testimonial-cards {
+    display: inline-block;
+    max-width: 100%;
   }
 }
