--- a/public/style.css
+++ b/public/style.css
@@ -134,6 +134,25 @@ body p {
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .btn {
+    margin: 30px;
+    padding: 5px 15px;
+    font-size: 12px;
+  }
+  body p {
+    font-size: 16px;
+  }
+  .section-heading {
+    font-size: 40px;
+    line-height: 38px;
+  }
+  .section-sub-heading {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
 /* Medium devices (landscape tablets, 768px and up) */
 /* @media only screen and (min-width: 768px) {...} */
 
