--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -57,26 +57,74 @@
   margin: 0px auto;
 }
 
-@media only screen and (max-width: 768px) {
+/*hamburger toggle button*/
+.hamburger-toggle-button {
+  position: absolute;
+  top: 30px;
+  right: 35px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.hamburger-toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+@media only screen and (max-width: 992px) {
   .header-menu,
   .login-btn {
     display: none;
   }
   .header-banner {
+    display: block;
     justify-content: flex-start;
+  }
+  .header-menu > * {
+    margin: 0px;
+  }
+
+  .hamburger-toggle-button {
+    display: flex;
+  }
+  .header-menu {
+    flex-direction: column;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 30vh;
+    justify-content: center;
+  }
+  .login-btn {
+    position: sticky;
+    display: block;
+    z-index: 3;
+    margin: auto;
+  }
+  .header-banner,
+  .header-menu {
+    background-color: #181818;
+  }
+  .header-menu li:hover {
+    background-color: #4452fe;
+    cursor: pointer;
+  }
+  .login-btn {
+    margin: auto;
+  }
+  .header-menu.active {
+    display: flex;
   }
 }
 
 @media only screen and (max-width: 600px) {
   .dark-fade-gradient {
     margin-top: -50vh;
-  }
-  .header-menu,
-  .login-btn {
-    display: none;
-  }
-  .header-banner {
-    justify-content: flex-start;
   }
 }
 /* 
