--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -58,6 +58,9 @@
 .header {
   margin: 0px auto;
 }
+.header li:hover {
+  cursor: pointer;
+}
 
 /*hamburger toggle button*/
 .hamburger-toggle-button {
@@ -77,7 +80,9 @@
   background-color: white;
   border-radius: 10px;
 }
-
+.hamburger-toggle-button:hover {
+  cursor: pointer;
+}
 @media only screen and (max-width: 992px) {
   .header-menu,
   .login-btn {
@@ -99,7 +104,7 @@
     position: absolute;
     z-index: 2;
     width: 100%;
-    height: 30vh;
+    height: 50vh;
     justify-content: center;
   }
 
